@@ -1,0 +1,31 @@
+# BEGIN PLOT /LHCB_2010_I867355/d0
+XLabel=$\eta(H_b)$
+LegendXPos=0.05
+LegendYPos=0.40
+# END PLOT
+
+
+# BEGIN PLOT /LHCB_2010_I867355/d01
+YLabel=$\mathrm{d}\sigma(pp \to H_b X) / \mathrm{d}\eta$ [$\mu$b]
+# END PLOT
+
+# BEGIN PLOT /LHCB_2010_I867355/d01-x01-y01 
+Title=$b$ production cross-section at $\sqrt{s}=7$ TeV, with LEP fragmentation fractions
+# END PLOT
+
+# BEGIN PLOT /LHCB_2010_I867355/d01-x01-y02 
+Title=$b$ production cross-section at $\sqrt{s}=7$ TeV, with Tevatron fragmentation fractions
+# END PLOT
+
+
+# BEGIN PLOT /LHCB_2010_I867355/d02
+YLabel=$\sigma(pp \to H_b X)|_{2<\eta<6}$ [$\mu$b]
+# END PLOT
+
+# BEGIN PLOT /LHCB_2010_I867355/d02-x01-y01 
+Title=$b$ production cross-section at $\sqrt{s}=7$ TeV, with LEP fragmentation fractions
+# END PLOT
+
+# BEGIN PLOT /LHCB_2010_I867355/d02-x01-y02 
+Title=$b$ production cross-section at $\sqrt{s}=7$ TeV, with Tevatron fragmentation fractions
+# END PLOT
