@@ -161,6 +161,7 @@ dist_pkgdata_DATA = \
   JADE_OPAL_2000_S4300807.plot \
   JADE_1998_S3612880.plot \
   LHCB_2010_S8758301.plot \
+  LHCB_2010_I867355.plot \
   LHCB_2011_I917009.plot \
   LHCB_2011_I919315.plot \
   LHCF_2012_I1115479.plot \
